openshift201/templates/loki_template.yaml
---
# Source: loki/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: andrea-williams-loki-headless
  namespace: 4zq6uj-andrea-williams-ocp201-tst-dev
  labels:
    app: loki
    chart: loki-0.16.0
    release: andrea-williams-loki
    heritage: Tiller
spec:
  clusterIP: None
  ports:
    - port: 3100
      protocol: TCP
      name: http-metrics
      targetPort: http-metrics
  selector:
    app: loki
    release: andrea-williams-loki

---
# Source: loki/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: andrea-williams-loki
  namespace: 4zq6uj-andrea-williams-ocp201-tst-dev
  labels:
    app: loki
    chart: loki-0.16.0
    release: andrea-williams-loki
    heritage: Tiller
  annotations:
    {}
    
spec:
  type: ClusterIP
  ports:
    - port: 3100
      protocol: TCP
      name: http-metrics
      targetPort: http-metrics
  selector:
    app: loki
    release: andrea-williams-loki

---
# Source: loki/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: andrea-williams-loki
  namespace: 4zq6uj-andrea-williams-ocp201-tst-dev
  labels:
    app: loki
    chart: loki-0.16.0
    release: andrea-williams-loki
    heritage: Tiller
  annotations:
    {}
    
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  selector:
    matchLabels:
      app: loki
      release: andrea-williams-loki
  serviceName: andrea-williams-loki-headless
  updateStrategy:
    type: RollingUpdate
    
  template:
    metadata:
      labels:
        app: loki
        name: loki
        release: andrea-williams-loki
      annotations:
        checksum/config: 7be225d3fe9e88cbf0ee6371c6cfb6ed7e7ff6233511d8b07d1176797dd6263b
        prometheus.io/port: http-metrics
        prometheus.io/scrape: "true"
        
    spec:
      serviceAccountName: default
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        
      containers:
        - name: loki
          image: "grafana/loki:v0.3.0"
          imagePullPolicy: IfNotPresent
          args:
            - "-config.file=/etc/loki/loki.yaml"
          volumeMounts:
            - name: config
              mountPath: /etc/loki
            - name: storage
              mountPath: "/data"
              subPath: 
          ports:
            - name: http-metrics
              containerPort: 3100
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
            
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
            
          resources:
            {}
            
          securityContext:
            readOnlyRootFilesystem: true
      nodeSelector:
        {}
        
      affinity:
        {}
        
      tolerations:
        []
        
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config
          secret:
            secretName: andrea-williams-loki
        - name: storage
          emptyDir: {}


---
# Source: loki/templates/networkpolicy.yaml

---
# Source: loki/templates/pdb.yaml

---
# Source: loki/templates/podsecuritypolicy.yaml



---
# Source: loki/templates/role.yaml



---
# Source: loki/templates/rolebinding.yaml



---
# Source: loki/templates/serviceaccount.yaml



---
# Source: loki/templates/servicemonitor.yaml
