openshift201/templates/openshift_prometheus_template.yaml
---
apiVersion: template.openshift.io/v1
kind: Template
labels:
  template: prometheus-template
message: |-
  The following service(s) have been created in your project: ${PROMETHEUS_SERVICE_NAME}.
  For more information about using this template, including OpenShift considerations, contact the rocketchat community.
metadata:
  annotations:
    description: |-
      Prometheus Template for use in OpenShift 201 lab without persistent storage. 

      WARNING: Any configuration stored will be lost upon pod destruction. ConfigMaps should be used for codified configuration. 
    iconClass: icon-other-unknown
    openshift.io/display-name: prometheus-openshift201
    openshift.io/documentation-url: https://github.com/bcdevops/devops-platform-workshops
    openshift.io/long-description: This template provides a sample Prometheus configuration for lab purposes.
    openshift.io/provider-display-name: BCDevOps
    openshift.io/support-url: https://github.com/bcdevops/
    tags: monitoring,prometheus
  name: prometheus-template
objects:
- apiVersion: v1
  kind: ConfigMap
  metadata:
    labels:
      app: ${PROMETHEUS_SERVICE_NAME}
      chart: prometheus-9.1.2
      heritage: Tiller
    name: ${PROMETHEUS_SERVICE_NAME}
  data:
    alerts: |
      {}
      
    prometheus.yml: |
      [...]
    rules: |
      {}
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app: ${PROMETHEUS_SERVICE_NAME}
      chart: prometheus-9.1.2
      heritage: Tiller
    name: ${PROMETHEUS_SERVICE_NAME}
  spec:
    accessModes:
      - ReadWriteOnce    
    resources:
      requests:
        storage: "1Gi"
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ${PROMETHEUS_SERVICE_NAME}
      chart: prometheus-9.1.2
      heritage: Tiller
    name: ${PROMETHEUS_SERVICE_NAME}
  spec:
    ports:
      - name: http
        port: 80
        protocol: TCP
        targetPort: 9090
    selector:
      app: ${PROMETHEUS_SERVICE_NAME}
    type: ClusterIP
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    labels:
      app: ${PROMETHEUS_SERVICE_NAME}
      chart: prometheus-9.1.2
      heritage: Tiller
    name: ${PROMETHEUS_SERVICE_NAME}
  spec:
    selector:
      matchLabels:
        app: ${PROMETHEUS_SERVICE_NAME}
    replicas: 1
    template:
      metadata:
        labels:
          app: ${PROMETHEUS_SERVICE_NAME}
          chart: prometheus-9.1.2
          heritage: Tiller
      spec:
        serviceAccountName: default
        containers:
          - name: ${PROMETHEUS_SERVICE_NAME}-configmap
            image: "jimmidyson/configmap-reload:v0.2.2"
            imagePullPolicy: "IfNotPresent"
            args:
              - --volume-dir=/etc/config
              - --webhook-url=http://127.0.0.1:9090/-/reload
            resources:
              {}
            volumeMounts:
              - name: config-volume
                mountPath: /etc/config
                readOnly: true
          - name: ${PROMETHEUS_SERVICE_NAME}
            image: "prom/prometheus:v2.11.1"
            imagePullPolicy: "IfNotPresent"
            args:
              - --storage.tsdb.retention.time=15d
              - --config.file=/etc/config/prometheus.yml
              - --storage.tsdb.path=/data
              - --web.console.libraries=/etc/prometheus/console_libraries
              - --web.console.templates=/etc/prometheus/consoles
              - --web.enable-lifecycle
            ports:
              - containerPort: 9090
            readinessProbe:
              httpGet:
                path: /-/ready
                port: 9090
              initialDelaySeconds: 30
              timeoutSeconds: 30
            livenessProbe:
              httpGet:
                path: /-/healthy
                port: 9090
              initialDelaySeconds: 30
              timeoutSeconds: 30
            resources:
              {}
            volumeMounts:
              - name: config-volume
                mountPath: /etc/config
              - name: storage-volume
                mountPath: /data
                subPath: ""
        terminationGracePeriodSeconds: 300
        volumes:
          - name: config-volume
            configMap:
              name: ${PROMETHEUS_SERVICE_NAME}
          - name: storage-volume
            persistentVolumeClaim:
              claimName: ${PROMETHEUS_SERVICE_NAME}
parameters:
- description: Maximum amount of memory the container can use.
  displayName: Memory Limit
  name: MEMORY_LIMIT
  required: true
  value: 512Mi
- description: The namespace this templated is deployed into.
  displayName: Namespace
  name: NAMESPACE
  value: openshift
- description: The name of the Prometheus service.
  displayName: Prometheus Service Name
  name: PROMETHEUS_SERVICE_NAME
  required: true
  value: prometheus
- description: Default route subdomain
  displayName: Route subdomain
  name: ROUTE_SUBDOMAIN
  required: true
  value: pathfinder.gov.bc.ca
